lockwise-proof-of-concept/samples/positive/unused/resources/82/13.woff2
version https://git-lfs.github.com/spec/v1
oid sha256:2b56e3544de25a2bc015f2df367a527d3e1f5691510605d7cb5d06d8c2e7fd6d
size 21940
