lockwise-proof-of-concept/samples/negative/resources/fp54/8.woff2
version https://git-lfs.github.com/spec/v1
oid sha256:d1de97533f8c973f9eb1162098eee749715f058edb650efd69e9d6ac62b056b6
size 22440
